manifest/06-UserMgmtWebApp-Deployment.yml
apiVersion: apps/v1
kind: Deployment 
metadata:
  name: usermgmt-webapp
  labels:
    app: usermgmt-webapp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: usermgmt-webapp
  template:  
    metadata:
      labels: 
        app: usermgmt-webapp
    spec:
      containers:
        - name: usermgmt-webapp
          image: matte250/restuaranteer:1.0.0
          imagePullPolicy: Always
          ports: 
            - containerPort: 3000
