manifest/07-UserMgmtWebApp-Service.yml
apiVersion: v1
kind: Service
metadata:
  name: usermgmt-webapp-service
  labels: 
    app: usermgmt-webapp
spec: 
  type: ClusterIP
  selector: 
    app: usermgmt-webapp
  ports: 
    - port: 80
      targetPort: 3000
