manifest/ingress-manifest.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: restuapp1-ingress-service
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: usermgmt-webapp-service
            port:
              number: 80
